5.8/developer-support/release-notes/pump.mdx
---
canonical: https://tyk.io/docs/developer-support/release-notes/pump
description: Release notes documenting updates, enhancements and changes for Tyk Pump
  versions within the 1.X.X series.
keywords: Tyk Pump, Release notes, v1.11, v1.12, v1.13, changelog
noindex: noindex, follow
sidebarTitle: Pump
title: Tyk Pump Release Notes
---

**Open Source** ([Mozilla Public License](https://github.com/TykTechnologies/tyk/blob/master/LICENSE.md))

**This page contains all release notes for Pump displayed in a reverse chronological order**

## Support Lifetime

Our minor releases are supported until our next minor comes out.

---

## 1.13 Release Notes

### 1.13.3 Release Notes

#### Release Date 12 February 2025

#### Release Highlights

In this release, we have fixed some priority CVEs. For a comprehensive list of changes, please refer to the detailed [changelog](/5.8/#Changelog-v1.13.3). 

#### Breaking Changes

This release has no breaking changes.

#### Dependencies

##### 3rd Party Dependencies & Tools


| Third Party Dependency                                    | Tested Versions   | Compatible Versions      |
| :--------------------------------------------------------- | :----------------- | :------------------------ | 
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 |
| [PostgreSQL](https://www.postgresql.org/download/)        | 13.x - 17.x       | 13.x - 17.x              | 
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | 
| [Valkey](https://valkey.io/download/)                     | 8.0.x, 8.1.x      | 7.2.x, 8.0.x, 8.1.x      |                            

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations

There are no deprecations in this release.

#### Upgrade instructions

For users currently on v1.13.2, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.13.2 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.13.3](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.13.3)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.13.3
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.13.3)

#### Changelog
<a id="Changelog-v1.13.3"></a>

##### Security Fixes

<AccordionGroup>

<Accordion title='CVE fixed'>
Addressed CVEs reported in dependent libraries, providing increased protection against security
vulnerabilities, including, but not limited to:

- <a href="https://nvd.nist.gov/vuln/detail/CVE-2025-61726" target="_blank">CVE-2025-61726</a>
- <a href="https://nvd.nist.gov/vuln/detail/CVE-2025-61728" target="_blank">CVE-2025-61728</a>
- <a href="https://nvd.nist.gov/vuln/detail/CVE-2025-68121" target="_blank">CVE-2025-68121</a>

</Accordion>

</AccordionGroup>

### 1.13.2 Release Notes

#### Release Date 18 December 2025

#### Release Highlights

In this patch release, we've resolved SQL Pump schema migration issues for sharded tables. For a comprehensive list of changes, please refer to the detailed [changelog](/5.8/#Changelog-v1.13.2).

#### Breaking Changes

No breaking changes. However, please note that first startup may be slower due to database schema migration if the new `migrate_sharded_tables` configuration is set. See changelog for details.

#### Dependencies

##### 3rd Party Dependencies & Tools


| Third Party Dependency                                    | Tested Versions   | Compatible Versions      |
| :--------------------------------------------------------- | :----------------- | :------------------------ | 
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 |
| [PostgreSQL](https://www.postgresql.org/download/)        | 13.x - 17.x       | 13.x - 17.x              | 
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | 
| [Valkey](https://valkey.io/download/)                     | 8.0.x, 8.1.x      | 7.2.x, 8.0.x, 8.1.x      |                            

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations

There are no deprecations in this release.
For further information, please check the [changelog](/5.8/#Changelog-v1.13.2) below.

#### Upgrade instructions

For users currently on v1.13.1, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.13.0 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.13.2](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.13.2)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.13.2
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.13.2)

#### Changelog
<a id="Changelog-v1.13.2"></a>

##### Fixed

<AccordionGroup>

<Accordion title='Fixed SQL Pump table sharding schema migration issues'>
Fixed an issue when using table sharding with the SQL pumps (creating new tables for each day), where the Pump would generate error messages in the application logs due to missing columns in the tables. This would only occur when upgrading to a newer version of Pump that added columns (e.g., to Pump 1.11.0, which added some GraphQL-related columns). Now, when Pump is upgraded, the current day's table will automatically be updated to include the new columns, so the error messages will not be generated.

We have added a new configuration option `migrate_sharded_tables`, which will update all pre-existing tables in the SQL database to match the latest schema. This will be a one-time operation when the Pump starts up, but could take some time to complete if there is a large history in the database, so it has been made an optional activity via this configuration option.
</Accordion>

</AccordionGroup>


### 1.13.1 Release Notes

#### Release Date 27 November 2025

#### Release Highlights

In this patch release, we fixed high-priority CVEs. For a comprehensive list of changes, please refer to the detailed [changelog](/5.8/#Changelog-v1.13.1).

#### Breaking Changes

#### Dependencies

##### 3rd Party Dependencies & Tools


| Third Party Dependency                                    | Tested Versions   | Compatible Versions      |
| :--------------------------------------------------------- | :----------------- | :------------------------ | 
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 |
| [PostgreSQL](https://www.postgresql.org/download/)        | 13.x - 17.x       | 13.x - 17.x              | 
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | 
| [Valkey](https://valkey.io/download/)                     | 8.0.x, 8.1.x      | 7.2.x, 8.0.x, 8.1.x      |                            

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations

There are no deprecations in this release.
For further information, please check the [changelog](/5.8/#Changelog-v1.13.1) below.

#### Upgrade instructions

For users currently on v1.13.0, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.13.0 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.13.1](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.13.1)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.13.1
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.13.1)

#### Changelog
<a id="Changelog-v1.13.1"></a>

##### Security Fixes

<AccordionGroup>

<Accordion title='CVE fixed'>
Fixed the following high-priority CVEs, providing increased protection against security
vulnerabilities:

- <a href="https://www.cve.org/CVERecord?id=CVE-2025-47912" target="_blank">CVE-2025-47912</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-58183" target="_blank">CVE-2025-58183</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-58185" target="_blank">CVE-2025-58185</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-58186" target="_blank">CVE-2025-58186</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-58187" target="_blank">CVE-2025-58187</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-58188" target="_blank">CVE-2025-58188</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-58189" target="_blank">CVE-2025-58189</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-61723" target="_blank">CVE-2025-61723</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-61724" target="_blank">CVE-2025-61724</a>
- <a href="https://www.cve.org/CVERecord?id=CVE-2025-61725" target="_blank">CVE-2025-61725</a>

</Accordion>

</AccordionGroup>

### 1.13.0 Release Notes

#### Release Date 29 October 2025

#### Breaking Changes

This release has no breaking changes, but does include the deprecation of two global configuration options ([DecodeRawRequest](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#raw_request_decoded) and [DecodeRawResponse](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#raw_response_decoded)) that did not previously work. There is no change to functionality from these deprecations.

#### Dependencies

##### 3rd Party Dependencies & Tools


| Third Party Dependency                                    | Tested Versions   | Compatible Versions      |
| :--------------------------------------------------------- | :----------------- | :------------------------ | 
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 |
| [PostgreSQL](https://www.postgresql.org/download/)        | 13.x - 17.x       | 13.x - 17.x              | 
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | 
| [Valkey](https://valkey.io/download/)                     | 8.0.x, 8.1.x      | 7.2.x, 8.0.x, 8.1.x      |                            

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations

Deprecated the global configuration options [DecodeRawRequest](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#raw_request_decoded) and [DecodeRawResponse](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#raw_response_decoded).
For further information, please check the [changelog](/5.8/#Changelog-v1.13.0) below.

#### Upgrade instructions

For users currently on v1.12.2, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.12.2 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.13.0](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.13.0)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.13.0
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.13.0)

#### Changelog
<a id="Changelog-v1.13.0"></a>

##### Changed

<ul>
<li>
<Expandable title={'Deprecated payload decoding global configuration options'}>
We have deprecated the global `DecodeRawRequest` and `DecodeRawResponse` configuration options, which were never correctly implemented and led to confusion when combined with the Pump-specific options. Now, if you want a Pump to decode the base64 encoded request and/or response payloads when transferring traffic logs to your data sink, you should set the options in the configuration for that Pump.
</Expandable>
</li>
</ul>

##### Added
<ul>

<li>
<AccordionGroup>
<Accordion title={'Added support for encrypted Kinesis streams in Pump'}>
Added support for server-side encryption in the Kinesis Pump by introducing a new configuration option [TYK_PMP_PUMPS_KINESIS_META_KMSKEYID](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#pumpskinesismetakmskeyid) that allows users to specify an AWS KMS key for encrypting data at rest in Kinesis Data Streams.

This enhancement enables compliance with strict regulatory requirements and security needs by automatically encrypting data before it's written to Kinesis storage and decrypting it when retrieved. The feature is backward compatible, with server-side encryption disabled by default for existing deployments.
</Accordion>

<Accordion title={'Added "Latency.Total" and "Latency.Upstream" fields to InfluxDB2 Pump'}>
Added two new fields to the traffic logs transferred using the InfluxDB2 pump. 

1. `Latency.Total`: Represents the total time taken to process a request.
2. `Latency.Upstream`: Represents the time taken to communicate with the upstream.

These metrics can be used to calculate the Gateway processing time (`Latency.Total` - `Latency.Upstream`), which is essential for monitoring API performance and diagnosing bottlenecks. This enhancement enables customers to perform comprehensive latency analysis and identify performance bottlenecks in their API infrastructure.
</Accordion>

<Accordion title={'Added "batchbytes" configuration option for Kafka pump'}>
Added a new configuration option [TYK_PMP_PUMPS_KAFKA_META_BATCHBYTES](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#pumpskafkametabatch_bytes) to the Kafka pump that allows users to configure the maximum size (in bytes) of a batch before it is sent to a Kafka partition. 

This enhancement resolves issues where batched analytics data exceeded Kafka's default 1MB message size limit, causing "Message Size Too Large" errors and resulting in missing analytics data. Users can now optimize the batch size to match their Kafka topic configurations, with backward compatibility maintained through the default 1MB limit.
</Accordion>
</AccordionGroup>
</li>

</ul>

## 1.12 Release Notes

### 1.12.1 Release Notes

#### Release Date 18 August 2025

#### Release Highlights

This release improves log reliability in the Syslog Pump by ensuring that raw request and response data are no longer fragmented into multiple entries. Logs are now consolidated into a single entry per API request, making analysis easier while preserving compatibility with existing log parsers.

For a comprehensive list of changes, please refer to the detailed [changelog](/5.8/#Changelog-v1.12.1) below.

#### Breaking Changes
This release has no breaking changes

#### Dependencies

##### 3rd Party Dependencies & Tools


| Third Party Dependency                                    | Tested Versions   | Compatible Versions      | Comments                   |
| :--------------------------------------------------------- | :----------------- | :------------------------ | :-------------------------- |
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 | Used by Tyk Pump and Tyk Dashboard      |
| [PostgreSQL](https://www.postgresql.org/download/)        | 13.x - 17.x    | 13.x - 17.x              | Used by Tyk Pump and Tyk Dashboard      |
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | Used by all Tyk components |

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations
There are no deprecations in this release.

#### Upgrade instructions
For users currently on v1.12.0, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.12.0 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.12.1](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.12.1)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.12.1
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.12.1)

#### Changelog
<a id="Changelog-v1.12.1"></a>

##### Fixed

<ul>
<li>
<Expandable title={'Consolidated Syslog Log Entries'}>
Resolved an issue in the Syslog Pump where enabling `Decode Raw Request` and `Decode Raw Response` caused log entries to fragment into multiple messages due to unescaped newline characters. The fix ensures a single consolidated log entry by escaping newlines (\n) in raw request and response fields, maintaining backward compatibility with existing log parsers.
</Expandable>
</li>

</ul>

### 1.12.0 Release Notes

#### Release Date 28 March 2025

#### Release Highlights

This release enhances Pump's database compatibility and security by adding support for PostgreSQL 17, removing SQLite support, and addressing critical security vulnerabilities (CVEs). These improvements ensure better performance, long-term stability, and overall enhanced security.

For a comprehensive list of changes, please refer to the detailed [changelog](/5.8/#Changelog-v1.12.0) below.

#### Breaking Changes
This release removes support for SQLite in Pump, aligning with the broader removal of SQLite from the Tyk Dashboard. This change improves compatibility with enterprise environments and addresses implementation issues related to SQLite.

#### Dependencies

##### 3rd Party Dependencies & Tools

With PostgreSQL v11 reaching [EOL](https://www.postgresql.org/support/versioning/) in November 2023, we can no longer guarantee full compatibility with this version of the database. If you are [using PostgreSQL](/5.8/planning-for-production/database-settings#postgresql) we recommend that you upgrade to a version that we have tested with, as indicated below.

| Third Party Dependency                                    | Tested Versions   | Compatible Versions      | Comments                   |
| :--------------------------------------------------------- | :----------------- | :------------------------ | :-------------------------- |
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 | Used by Tyk Pump and Tyk Dashboard      |
| [PostgreSQL](https://www.postgresql.org/download/)        | 13.x - 17.x    | 13.x - 17.x              | Used by Tyk Pump and Tyk Dashboard      |
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | Used by all Tyk components |

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations
There are no deprecations in this release.

#### Upgrade instructions
For users currently on v1.11.0, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.11.0 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.12.0](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.12.0)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.12.0
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.12.0)

#### Changelog
<a id="Changelog-v1.12.0"></a>

##### Changed

<ul>

<li>
<Expandable title={'Support for PostgreSQL 17'}>
Pump now supports PostgreSQL 17, ensuring compatibility with the latest database version.
</Expandable>
</li>

<li>
<Expandable title={'Removal of SQLite Support in Pump'}>
SQLite support has been fully removed from Pump.
</Expandable>
</li>


</ul>

##### Security Fixes
<ul>
<li>
<Expandable title={'Fixed the following CVE'}>
- [GHSA-v778-237x](https://github.com/advisories/GHSA-v778-237x-gjrc)
</Expandable>
</li>
</ul>

---

## 1.11 Release Notes

### 1.11.2 Release Notes

#### Release Date 10 January 2025

#### Release Highlights

This patch release focuses on improving the robustness of SQL-Pump in scenarios involving table sharding and analytics data, ensuring smoother operations and better compatibility with PostgreSQL-based environments.

#### Breaking Changes
This release has no breaking changes.

#### Dependencies

##### 3rd Party Dependencies & Tools

With PostgreSQL v11 reaching [EOL](https://www.postgresql.org/support/versioning/) in November 2023, we can no longer guarantee full compatibility with this version of the database. If you are [using PostgreSQL](/5.8/planning-for-production/database-settings#postgresql) we recommend that you upgrade to a version that we have tested with, as indicated below.

| Third Party Dependency                                    | Tested Versions   | Compatible Versions      | Comments                   |
| :--------------------------------------------------------- | :----------------- | :------------------------ | :-------------------------- |
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 | Used by Tyk Pump and Tyk Dashboard      |
| [PostgreSQL](https://www.postgresql.org/download/)        | 12.x - 16.x    | 12.x - 16.x              | Used by Tyk Pump and Tyk Dashboard      |
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | Used by all Tyk components |

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations
There are no deprecations in this release.

#### Upgrade instructions
For users currently on v1.11.0, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.11.0 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.11.2](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.11.2)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.11.2
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.11.2)

#### Changelog
  
##### Fixed

<ul>
<li>
<Expandable title={'SQL-Pump Crashes When `tablesharding=true` and Analytics Are Skipped for Certain APIs'}>
The issue causing a runtime error when writing analytics data for skipped APIs has been addressed. SQL-Pump now processes these scenarios gracefully, ensuring stability in table-sharded configurations.
</Expandable>
</li>

<li>
<Expandable title={'Indices Not Created in Sharded `tyk_analytics` Tables if Indices with Same Names Exist in Earlier Tables'}>
Fixed the index creation logic to ensure indices are generated correctly for all sharded tables, regardless of whether indices with the same names exist in earlier tables. This ensures proper query performance and data integrity in environments with table sharding.
</Expandable>
</li>
</ul>
 
---

### 1.11.1 Release Notes

#### Release Date 04 December 2024

#### Release Highlights

This patch release focuses on critical dependency updates to address security vulnerabilities and maintain compatibility with the latest tools. Users are encouraged to upgrade to benefit from enhanced security and improved stability.

#### Breaking Changes
This release has no breaking changes.

#### Dependencies

##### 3rd Party Dependencies & Tools

With PostgreSQL v11 reaching [EOL](https://www.postgresql.org/support/versioning/) in November 2023, we can no longer guarantee full compatibility with this version of the database. If you are [using PostgreSQL](/5.8/planning-for-production/database-settings#postgresql) we recommend that you upgrade to a version that we have tested with, as indicated below.

| Third Party Dependency                                    | Tested Versions   | Compatible Versions      | Comments                   |
| :--------------------------------------------------------- | :----------------- | :------------------------ | :-------------------------- |
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 | Used by Tyk Dashboard      |
| [PostgreSQL](https://www.postgresql.org/download/)        | 12.x - 16.x    | 12.x - 16.x              | Used by Tyk Dashboard      |
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | Used by all Tyk components |

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations
There are no deprecations in this release.

#### Upgrade instructions
For users currently on v1.11.0, we strongly recommend promptly upgrading to the latest release. If you are working with an older version (lower major), it is advisable to bypass version 1.11.0 and proceed directly to this latest patch release.
<br/>
Go to the [Upgrading Tyk](/5.8/#upgrading-tyk) section for detailed upgrade Instructions.

#### Downloads
- [Docker Image v1.11.1](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.11.1)
  - ```bash
    docker pull tykio/tyk-pump-docker-pub:v1.11.1
    ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.11.1)

#### Changelog
  
##### Changed

<ul>
<li>
<Expandable title={'Upgraded Golang to v1.22.7'}>
Updated to the [Go v1.22.7](https://go.dev/doc/devel/release#go1.22) to leverage its performance improvements, bug fixes, and security patches.
</Expandable>
</li>
</ul>

##### Security Fixes
- Fixed the following CVEs:
    - [GHSA-7jwh-3vrq-q3m8](https://github.com/jackc/pgproto3/security/advisories/GHSA-7jwh-3vrq-q3m8)
    - [GHSA-mrww-27vc-gghv](https://github.com/advisories/GHSA-mrww-27vc-gghv)
    - [GO-2024-2611](https://pkg.go.dev/vuln/GO-2024-2611)
 
---

### 1.11.0 Release Notes

#### Release Date 13 August 2024

#### Breaking Changes
This release has no breaking changes.

#### Dependencies

##### 3rd Party Dependencies & Tools

With PostgreSQL v11 reaching [EOL](https://www.postgresql.org/support/versioning/) in November 2023, we can no longer guarantee full compatibility with this version of the database. If you are [using PostgreSQL](/5.8/planning-for-production/database-settings#postgresql) we recommend that you upgrade to a version that we have tested with, as indicated below.

| Third Party Dependency                                    | Tested Versions   | Compatible Versions      | Comments                   |
| :--------------------------------------------------------- | :----------------- | :------------------------ | :-------------------------- |
| [GoLang](https://go.dev/dl/)                              | 1.19, 1.20, 1.21  | 1.19, 1.20, 1.21         | All our binaries           |
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 | Used by Tyk Dashboard      |
| [PostgreSQL](https://www.postgresql.org/download/)        | 12.x - 16.x    | 12.x - 16.x              | Used by Tyk Dashboard      |
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | Used by all Tyk components |

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

#### Deprecations

There are no deprecations in this release.

#### Upgrade instructions

For users currently on v1.10.X, we strongly recommend promptly upgrading to the latest release. If you are working with an older version, it is advisable to bypass version 1.10 and proceed directly to this latest release.

#### Release Highlights

##### Security fixes
This release focuses on improving security and compliance, enhancing integration capabilities, and ensuring robust performance in secure environments.

#### Downloads
- [Docker Image v1.11.0](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.11)
- ```bash
  docker pull tykio/tyk-pump-docker-pub:v1.11.0
  ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.11.0)

#### Changelog


##### Added

<ul>
<li>
<Expandable title={'Add Kinesis backend support'}>
Tyk Pump now supports Kinesis as a backend to push analytics to a data lake efficiently.
</Expandable>
</li>

</ul>

---

## 1.10 Release Notes

### Release Date 3 July 2024

### Breaking Changes
This release has no breaking changes.

### Dependencies

#### 3rd Party Dependencies & Tools

With PostgreSQL v11 reaching [EOL](https://www.postgresql.org/support/versioning/) in November 2023, we can no longer guarantee full compatibility with this version of the database. If you are [using PostgreSQL](/5.8/planning-for-production/database-settings#postgresql) we recommend that you upgrade to a version that we have tested with, as indicated below.

| Third Party Dependency                                    | Tested Versions   | Compatible Versions      | Comments                   |
| :--------------------------------------------------------- | :----------------- | :------------------------ | :-------------------------- |
| [GoLang](https://go.dev/dl/)                              | 1.19, 1.20, 1.21  | 1.19, 1.20, 1.21         | All our binaries           |
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 | Used by Tyk Dashboard      |
| [PostgreSQL](https://www.postgresql.org/download/)        | 12.x - 16.x    | 12.x - 16.x              | Used by Tyk Dashboard      |
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | Used by all Tyk components |

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

### Deprecations

There are no deprecations in this release.

### Upgrade instructions

For users currently on v1.9.X, we strongly recommend promptly upgrading to the latest release. If you are working with an older version, it is advisable to bypass version 1.9 and proceed directly to this latest release.

### Release Highlights

#### FIPS Compliance

Tyk Pump now offers [FIPS 140-2](https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.140-2.pdf) compliance. For further details please consult [Tyk API Management FIPS support](/5.8/developer-support/release-types/fips-release)

#### Security fixes
This release focuses on improving security and compliance, enhancing integration capabilities, and ensuring robust performance in secure environments.

### Downloads
- [Docker Image v1.10.0](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.10)
- ```bash
  docker pull tykio/tyk-pump-docker-pub:v1.10.0
  ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.10.0)

### Changelog

#### Added

<ul>
<li>
<Expandable title={'Added FIPS compliance'}>
Added [FIPS compliance](/5.8/developer-support/release-types/fips-release) for Tyk Pump.
</Expandable>
</li>
</ul>


#### Fixed

<ul>
<li>
<Expandable title={'Fixed Tyk Pump Splunk Integration using http_proxy and https_proxy Environment Variables'}>
Resolved an issue where `http_proxy` and `https_proxy` environment variables were not being respected in the Tyk Pump pod for Splunk connections.
</Expandable>
</li>

</ul>

#### Security Fixes

<ul>
<li>
<Expandable title={'Fixed the following CVEs'}>
<ul>
<li>PRISMA-2021-0108</li>
<li>PRISMA-2023-0056</li>
<li>[CVE-2024-27304](https://nvd.nist.gov/vuln/detail/CVE-2024-27304)</li>
<li>[CVE-2023-45288](https://nvd.nist.gov/vuln/detail/CVE-2023-45288)</li>
</ul>
</Expandable>
</li>
</ul>

---

## 1.9 Release Notes

### Release Date 5 Apr 2024

### Breaking Changes

#### Attention: Please read this section carefully

MongoDB v4.4 will reach its [end of life support](https://www.mongodb.com/legal/support-policy/lifecycles) at the end of February 2024. In order to support newer versions of MongoDB and align with newer versions of Tyk, we have changed the default MongoDB driver from [mgo](https://github.com/go-mgo/mgo) to [mongo-go](https://github.com/mongodb/mongo-go-driver). The `mongo-go` driver supports MongoDB versions greater or equal to v4. **If you are using a version of MongoDB less than v4, please [follow this guide](https://github.com/TykTechnologies/tyk-pump#driver-type) to update the driver type to `mgo`.**

Users are strongly advised to follow the recommended [upgrade instructions](/5.8/#upgrading-tyk) provided by Tyk before applying any updates.

### Dependencies

#### 3rd Party Dependencies & Tools

| Third Party Dependency                                    | Tested Versions   | Compatible Versions      | Comments                   |
| :--------------------------------------------------------- | :----------------- | :------------------------ | :-------------------------- |
| [GoLang](https://go.dev/dl/)                              | 1.19, 1.20, 1.21  | 1.19, 1.20, 1.21         | All our binaries           |
| [MongoDB](https://www.mongodb.com/try/download/community) | 5.x, 6.x, and 7.0 | 4.4.x, 5.x, 6.x, and 7.0 | Used by Tyk Dashboard      |
| [PostgreSQL](https://www.postgresql.org/download/)        | 11.x - 15.x LTS   | 11.x - 15.x              | Used by Tyk Dashboard      |
| [Redis](https://redis.io/download/)                       | 6.x - 7.0         | 6.x - 7.x                | Used by all Tyk components |

Given the time difference between your upgrade and the release of this version, we recommend customers verify the ongoing support of third-party dependencies they install, as their status may have changed since the release.

### Deprecations

There are no deprecations in this release.

### Upgrade instructions

For users currently on v1.8.X, we strongly recommend promptly upgrading to the latest release. If you are working with an older version, it is advisable to bypass version 1.8 and proceed directly to this latest release.

### Release Highlights

#### Redis 7 and storage library

Tyk Pump now supports Redis v7, utilizing our [storage library v1.2.0](https://github.com/TykTechnologies/storage).

#### MongoDB Driver

As of v1.9, the default MongoDB driver has been changed from `mgo` to `mongo-go`.

#### AWS Simple Queue Service Support

Thanks to a community contribution by [masoudhaghbin](https://github.com/masoudhaghbin), Tyk Pump can now pump logs to an AWS SQS instance.

#### Tyk Graph Pump

There has been a significant enhancement in Tyk Graph Pump with the removal of the dependency on the `enable_detailed_recording` setting. This change is designed to streamline operations, reduce storage requirements and enhance overall performance in production environments. By decoupling detailed recording from specific configuration options, Tyk Graph Pump now provides greater flexibility and control over data storage.


### Downloads
- [Docker Image v1.9.0](https://hub.docker.com/r/tykio/tyk-pump-docker-pub/tags?page=&page_size=&ordering=&name=v1.9.0)
- ```bash
  docker pull tykio/tyk-pump-docker-pub:v1.9.0
  ```
- Source code tarball for OSS - [GH Tyk Pump Repo](https://github.com/TykTechnologies/tyk-pump/releases/tag/v1.9.0)

### Changelog

#### Added

<ul>
<li>
<Expandable title={'Redis 7 Support'}>
Tyk Pump now support Redis v7 utilizing our [storage library v1.2.0](https://github.com/TykTechnologies/storage).
</Expandable>
</li>
<li>
<Expandable title={'Added AWS Simple Queue Service pump support'}>
Pump can now send logs to an Amazon SQS instance. This was a [community contribution](https://github.com/TykTechnologies/tyk-pump/pull/740) co-authored by [masoudhaghbin](https://github.com/masoudhaghbin). Please follow [this guide](https://github.com/TykTechnologies/tyk-pump#SQS-config) to set up an SQS pump.
</Expandable>

</li>
</ul>

#### Changed

<ul>
<li>
<Expandable title={'Updated Go version to v1.21'}>
Tyk Pump now uses Go v1.21
</Expandable>
</li>

<li>
<Expandable title={'Resurface Pump Updated'}>
The Resurface Pump has been updated with the [following improvements](https://github.com/TykTechnologies/tyk-pump/pull/731).

- Upgrade `logger-go` dependency to version 3.3.1, which includes improvements in goroutine management, as well as a new `Stop` method for graceful shutdown.
- Add support for async data writing, by adding a bounded channel to buffer data records and process them concurrently in the background.
- Add `Shutdown` method for graceful shutdown of `ResurfacePump` backend.

Thanks to community member [Ramón Márquez](https://github.com/monrax) for updating this pump.
</Expandable>
</li>
</ul>
 
#### Fixed

<ul>
<li>
<AccordionGroup>
<Accordion title={'Added backoff retry mechanism for Splunk Pump'}>
Tyk Pump now has an expontential backoff retry mechanism for sending logs to Splunk. This mechanism mitigates the chance of losing logs if Pump should fail to send logs to Splunk. This fixes a bug where Splunk responses were not being checked correctly and fixes a bug where Pump was not closing connections after receiving responses.
</Accordion>

<Accordion title={'Added a field so that GraphQL aggregated analytics will display correctly for SQL databases'}>
For SQL databases, the GraphQL aggregated analytics record will now have a new `api_value` field so that analytics will be shown in the Dashboard correctly.
</Accordion>

<Accordion title={'Environment variables TYK_PMP_PUMPS_AGGREGATE_* now correctly correspond to definitions in pump.conf'}>
Fixed a bug where any `TYK_PMP_PUMPS_AGGREGATE_*` environment variables didn't correctly correspond to definitions in the pump.conf file.
</Accordion>

<Accordion title={'Added an api_id field so that GraphQL aggregated analytics will display correctly'}>
For SQL databases, the GraphQL aggregated analytics record will now have a new `api_id` field so that analytics will be shown in the Dashboard correctly.
</Accordion>

<Accordion title={'Fixed a bug where Tyk Pump could not connect to Redis Sentinel when TLS is enabled'}>
Fixed a bug causing Tyk Pump not to connect when Redis Sentinel was deployed using TLS.
</Accordion>
</AccordionGroup>
</li>
</ul>

#### Security Fixes

<ul>
<li>
<Expandable title={'Fixed the following CVEs'}>
<ul>
<li>
<a href="https://nvd.nist.gov/vuln/detail/CVE-2023-39325">CVE-2022-39325</a>
</li>
<li>
<a href="https://nvd.nist.gov/vuln/detail/CVE-2023-3978">CVE-2022-3978</a>
</li>
</ul>
</Expandable>
</li>
</ul>

#### Community Contributions

Special thanks to the following members of the Tyk community for their contributions to this release:

<ul>
<li>
<Expandable title={'Added Simple Queue Service pump support'}>
Pump can now [send logs](https://github.com/TykTechnologies/tyk-pump/pull/740) to an Amazon SQS instance.
Thanks to [masoudhaghbin](https://github.com/masoudhaghbin) for creating this pump. Please follow [this guide](https://github.com/asdf) to set up an SQS pump.
</Expandable>

</li>

<li>
<Expandable title={'Resurface Pump Updated'}>
The Resurface Pump has been updated with the [following improvements](https://github.com/TykTechnologies/tyk-pump/pull/731).

- Upgrade `logger-go` dependency to version 3.3.1, which includes improvements in goroutine management, as well as a new `Stop` method for graceful shutdown.
- Add support for async data writing, by adding a bounded channel to buffer data records and process them concurrently in the background.
- Add `Shutdown` method for graceful shutdown of `ResurfacePump` backend.

Thanks to community member [Ramón Márquez](https://github.com/monrax) for updating this pump.
</Expandable>
</li>
</ul>

---

## 1.8 Release Notes

### 1.8.3 Release Notes

#### Changelog

##### Fixed
- Corrected configuration for _pumps.kafka.meta.timeout_ to be interpreted as the number of seconds (_Type: int_) instead of a duration requiring a unit (_Type: Duration_).
- Fixed an issue where _Graph SQL Pump_ couldn't restart correctly when analytics storage table name was changed in Pump config. Some relations were not torn down and migrated correctly.

### 1.8.2 Release Notes

#### Changelog

##### Fixed
- Resolved performance issue where _SQL Aggregate_ analytics failed to load on the _Dashboard_ during heavy traffic by introducing a new index on the _sql_aggregate_ Pump called _idx_dimension_.
- Fixed _Prometheus Pump_ crashes on non UTF-8 URLs by updating to _prometheus-client_ v1.16.
- Fixed _MongoDB_ connection string issues related to certain characters ("?" and "@"), recommending URL-encoded values in usernames and passwords. This ensures compatibility with both _mgo_ and _mongo-go_ drivers.
- Fixed security vulnerabilities: _CVE-2022-36640_, _CVE-2022-21698_, _GO-2022-0322_ and _GHSA-cg3q-j54f-5p7p_.

##### Added
- Add `track_all_paths` configuration for _Prometheus Pump_. If enabled, all APIs will have path in the `tyk_http_status_per_path` metric. Otherwise, only endpoint that have "track" plugin set with have path shown in the metric. Endpoints without “track” plugin set will have “unknown” path shown in the metric.

##### Updated
- Improved security by obfuscating _Mongo Pump_ credentials in log outputs.

### 1.8.1 Release Notes


<Note>
#### Notes on MongoDB v5 and v6 compatibility

For MongoDB v5 and v6 users, please [set mongo driver type](https://github.com/TykTechnologies/tyk-pump#driver-type) to `mongo-go`.

From pump v1.8.1, the default MongoDB driver it uses is [mgo](https://github.com/go-mgo/mgo). This is to align with the default MongoDB driver of other Tyk components. This driver supports MongoDB versions up to v4. If you are using a later version of MongoDB v5 or MongoDB v6, please [follow this guide to update the driver type](https://github.com/TykTechnologies/tyk-pump#driver-type) to [mongo-go](https://github.com/mongodb/mongo-go-driver).
</Note>


#### Changelog

##### Fixed
- GraphQL analytics records were being excluded from the _tyk_analytics_ collection for Mongo Pump. This has been fixed so that GraphQL analytic records are now included as expected.
- Fixed MongoDB connection issue when using a password with URL escape characters (with mongo-go driver)
- Fixed an issue in Prometheus pump when filtering fields , e.g. _API Name_, that contain `--` in their value. For example, `test--name`. Prometheus Pump filtered the field as two separate instances, e.g. `test` & `name`, instead of the expected `test--name`.
- When [`omit_configfile`](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#omit_config_file) is set to `true`, Pump will not try to load the config file and spit out error logs

##### Updated
- Updated the default Hybrid Pump RPC pool size from 20 to 5 connections in order to reduce default CPU and memory footprint. See [Pump configurations](/5.8/tyk-pump/tyk-pump-configuration/tyk-pump-environment-variables#pumpshybridmetarpcpoolsize)
- Import and use latest [storage library v1.0.5](https://github.com/TykTechnologies/storage/releases/tag/v1.0.5)
- Updated default MongoDB driver to `mgo`. [Follow this guide to update the driver type](https://github.com/TykTechnologies/tyk-pump#driver-type)
- Pump name is now case-insensitive. It will override two or more pumps with the same name but in different cases (e.g. _Mongo_ / _mongo_)


### 1.8.0 Release Notes
Release date: 2023-05-04

#### Major features
Pump 1.8 introduces two new pumps: The GraphQL SQL Aggregate Pump - which allows you to transfer GraphQL transaction logs to SQL; and Resurface Pump - which allows you to transfer data to [Resurface.io](http://resurface.io/) for context based security analysis. 

We have changed the default MongoDB driver from [mgo](https://github.com/go-mgo/mgo) to [mongo-go](https://github.com/mongodb/mongo-go-driver). The new driver supports MongoDB versions greater or equal to v4. If you are using older version of MongoDB v3.x, please [follow this guide to update the driver type](https://github.com/TykTechnologies/tyk-pump#driver-type).

We have also added a config option that allow you to decode the raw requests and responses for all pumps so you don't need to worry about processing them in your data pipeline. For demo mode, there is now an option to generate future data for your convenience.

In this release, we are using a new Tyk storage library to connect to Mongo DB. This would allow us to switch to use the official Mongo Driver very easily in the future.


<Note>
#### Notes on MongoDB v3.x compatibility

In 1.8.0, the default MongoDB driver it use is [mongo-go](https://github.com/mongodb/mongo-go-driver). This driver supports MongoDB versions greater or equal to v4. If you are using older version of MongoDB v3.x, please [follow this guide to update the driver type](https://github.com/TykTechnologies/tyk-pump#driver-type).
</Note>


#### Changelog

##### Added
- Added GraphQL SQL Aggregate Pump.
- Added Resurface Pump - Resurface can provide context-based security analysis for attack and failure triage, root cause, threat and risk identification based on detailed API logs sent from Tyk Pump.
- Add config option raw_request_decoded and raw_response_decoded for decoding from base64 the raw requests/responses fields before writing to Pump. This is useful if you want to search for specific values in the raw request/response. Both are disabled by default. This setting is not available for Mongo and SQL pumps, since the dashboard will decode the raw request/response.
- Add the ability to generate future data in demo mode using --demo-future-data flag. 
- Remove critical CVE go.uuid vulnerability 
- Use the latest Tyk storage library to connect to Mongo 
- Hybrid Pump refactoring - we now have better RPC connection control, testability, and documentation 

##### Fixed
- Std pump does not log accurate time when set to json format 
- GraphPump doesn’t include names of queries/mutation and subscriptions called 
- Mongo Pump’s connection hangs forever if misconfigured 

## Further Information

### Upgrading Tyk

Please refer to the [upgrading Tyk](/5.8/developer-support/upgrading) page for further guidance on the upgrade strategy.

### FAQ

Please visit our [Developer Support](/5.8/developer-support/community) page for further information relating to reporting bugs, upgrading Tyk, technical support and how to contribute.